<resources>
    <!--- Strings for Actionbar Title  -->
    <string name="app_name">What To Do?</string>
    <string name="actionbar_parse_register_activity">Sign up</string>
    <string name="actionbar_parse_activity">Cloud</string>


    <!--- Strings for DialogAddListObject  -->
    <string name="dialog_title_add_listobject">Customize your List</string>
    <string name="dialog_hint_title_listobject">Name of your List…</string>

    <!--- Strings for ListItemDetailActivity  -->
    <string name="addListItemMenu_Title">Title</string>
    <string name="addListItemMenu_Date">Date</string>
    <string name="addListItemMenu_Date_hint">Set Date here</string>
    <string name="addListItemMenu_Note">Note</string>
    <string name="addListItemMenu_Note_hint">Add a Note here</string>
    <string name="addListItemMenu_Priority">Priority</string>
    <string name="addListItemActivity_AddButton">OK</string>
    <string name="addListItemActivity_RemindMe">Remind me?</string>
    <string name="addListItemActivityTitle_hint">Set Title here</string>
    <string name="addListItemActivityReminder_Date_hint">Set Reminder Date here</string>
    <string name="addListItemActivityReminder_Time_hint">Set Reminder Time here</string>
    <string name="addListItemActivityReminder_Time">Time</string>

    <!--- String Array for Priority Spinner in EditListItemActivity  -->
    <string-array name="addListItemMenu_Priority_Spinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!--- Strings for Floating Menu  -->
    <string name="FloatingMenu_Delete">Löschen</string>
    <string name="FloatingMenu_Edit">Bearbeiten</string>

    <!--- Strings for sort actions  -->
    <string name="action_sortAlphabetically">Sort: A-Z</string>
    <string name="action_sortMostItems">Sort: Most Items</string>
    <string name="action_sortPriority">Sort: Priority</string>
    <string name="action_sortDate">Sort: Date</string>
    <string name="action_sortDone">Sort: Undone Items</string>

    <!--- Strings for Dialogs -->
    <string name="message">Are you sure you want to delete selected Items?</string>
    <string name="messageList">Are you sure you want to delete selected List?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="addListItemMenu_cancel">Cancel</string>
    <string name="dialog_cancelMessage">You have some unsaved changes. Are you sure you want to leave this page?</string>
    <string name="dialog_cancelYes">Leave this Page</string>
    <string name="dialog_cancelNo">Stay on this Page</string>


    <!--- Strings for Toast Messages  -->
    <string name="toast_register_fail">Registration was not successful.</string>
    <string name="toast_reminder_fail">Can\'t set Reminder: Date or Time missing</string>
    <string name="toast_reminder_past">Can\'t set Reminder in the past</string>
    <string name="toast_title_fail">Title is missing</string>
    <string name="toast_cloud_backup_success">Cloud BackUp successful.</string>
    <string name="toast_cloud_restore_success">Cloud Restore successful.</string>
    <string name="toast_cloud_restore_fail">Cloud Restore not possible. Something went wrong.</string>
    <string name="toast_cloud_restore_nobackup">Cloud Restore not possible. May there is no BackUp in the Cloud.</string>


</resources>
