<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".SubMenu">

    <item android:id="@+id/action_sortAlphabeticallyLI"
        app:showAsAction="never"
        android:title="@string/action_sortAlphabetically" />

    <item android:id="@+id/action_sortPriority"
        app:showAsAction="never"
        android:title="@string/action_sortPriority" />

    <item android:id="@+id/action_sortDate"
        app:showAsAction="never"
        android:title="@string/action_sortDate" />

    <item
        android:id="@+id/action_addListItem"
        app:showAsAction="always"
        android:icon="@drawable/ic_add_list_item"
        android:orderInCategory="100"
        android:title="AddListItem" />

</menu>