<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView

        android:id="@+id/dialog_head"
        android:text="@string/dialog_title_add_listobject"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:contentDescription="@string/app_name" />

    <EditText
        android:id="@+id/dialog_addList_title"
        android:layout_width="match_parent"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_hint_title_listobject"
        android:maxLength="10"
        android:inputType="text"
        android:layout_marginBottom="16dp"/>

    <Spinner
        android:id="@+id/dialog_addList_spinner"
        android:background="@color/dark_background"
        android:popupBackground="@color/dark_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        />



</LinearLayout>